# risc0-crypto

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/guest/: Cargo.toml
bench/guest/src/: main.rs
bench/src/: main.rs
crates/crypto/: Cargo.toml  build.rs
crates/crypto/src/: modexp.rs
crates/crypto/src/curves/: bn254.rs
crates/evm/: Cargo.toml
crates/evm/src/: bn254.rs  lib.rs  modexp.rs  secp256k1.rs  secp256r1.rs  sha256.rs
crates/evm/tests/: precompile.rs
dev/bench/: data.js
src/: bigint.rs  ecdsa.rs  lib.rs  modexp.rs
src/curve/: ffi.rs  mod.rs  ops.rs
src/curves/: bls12_381.rs  bn254.rs  grumpkin.rs  mod.rs  secp256k1.rs  secp256r1.rs  secp384r1.rs
src/field/: element.rs  mod.rs  ops.rs  unreduced.rs  unverified.rs
