[package]
name = "risc0-crypto"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Cryptographic primitives built on risc0-bigint2"

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
educe = "0.6"
include_bytes_aligned = "0.2"
risc0-bigint2 = "1.4.13"

[dev-dependencies]
rstest = "0.26"
sha2 = { version = "0.10", default-features = false }
wycheproof = { version = "0.6", default-features = false, features = ["ecdh", "ecdsa"] }

[build-dependencies]
cargo_metadata = "0.23.1"

[lints.rust]
rust-2018-idioms = "deny"
unreachable-pub = "warn"
unused-must-use = "deny"

[lints.rustdoc]
all = "warn"

[lints.clippy]
use-self = "warn"
missing-const-for-fn = "warn"
redundant-clone = "warn"
dbg-macro = "warn"
uninlined-format-args = "warn"
manual-string-new = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--cfg=doc_auto_cfg",
]
