[workspace]
members = ["crates/crypto", "crates/evm"]
resolver = "3"

[workspace.lints.rust]
rust-2018-idioms = "deny"
unreachable-pub = "warn"
unused-must-use = "deny"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
use-self = "warn"
missing-const-for-fn = "warn"
redundant-clone = "warn"
dbg-macro = "warn"
uninlined-format-args = "warn"
manual-string-new = "warn"
