[package]
name = "risc0-crypto-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
colored = "3.0"
regex = "1.11"
risc0-zkvm = "3.0"
tabular = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thousands = "0.2.0"

[build-dependencies]
risc0-build = "3.0"

[package.metadata.risc0]
methods = ["guest"]
