# Standalone workspace - the benchmark harness pulls in risc0-zkvm and a guest
# methods build, which we don't want in the main workspace's dependency graph.
[workspace]

[package]
name = "risc0-crypto-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
colored = "3.0"
regex = { version = "1.11", default-features = false, features = ["std", "perf"] }
risc0-zkvm = { version = "3.0", default-features = false, features = ["client"] }
tabular = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thousands = "0.2.0"

[build-dependencies]
risc0-build = "3.0"

[package.metadata.risc0]
methods = ["guest"]
