[package]
name = "risc0-crypto-evm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "EVM precompile primitives backed by risc0-crypto - BN254 G1, P-256 verify, ecrecover, modexp, SHA-256"

[dependencies]
alloy-primitives = { version = "1.5", default-features = false, features = ["map"] }
risc0-crypto = { version = "0.1", path = "../crypto" }
risc0-zkp = { version = "3.0.4", default-features = false }

[dev-dependencies]
# `cargo risczero guest test` builds the integration tests for the zkVM
# target. `getrandom` 0.2 needs the `custom` feature to compile there.
getrandom = { version = "0.2", features = ["custom"] }
num-bigint = { version = "0.4", default-features = false }
rstest = { version = "0.26", default-features = false }

[lints.rust]
rust-2018-idioms = "deny"
unreachable-pub = "warn"
unused-must-use = "deny"

[lints.rustdoc]
all = "warn"

[lints.clippy]
use-self = "warn"
missing-const-for-fn = "warn"
redundant-clone = "warn"
dbg-macro = "warn"
uninlined-format-args = "warn"
manual-string-new = "warn"
